# inary

./: .config  .gitignore  .travis.yml  AUTHORS  AUTHORS.OLD  ApiPlan  BUGS  CHAT  CLI-KAYIP  CODING  COPYING.PISI_FORK  ChangeLog  ChangeLog.OLD  Changelog  EOF  FIXME  FIXME.md  HISTORY.devel-fork  INSTALL  MANIFEST  MANIFEST.in  Makefile  NEWS  PKG-INFO  README  README.md  ROADMAP  ROADMAP.OLD  RefactorPlan  TODO  _config.yml  about.html  actions-main.c  apimigration  cat-db.py  comar-dbus.patch  comar.patch  configure  faqs.html  genindex.html  (+36 more)
_posts/: 2019-11-11-welcome-to-jekyll.markdown
_static/: documentation_options.js  opensearch.xml
basicsofinary/: index.html  install.html  works.html
commands/: blame.html  build.html  check.html  configure-pending.html  delete-cache.html  delta.html  emerge.html  emergeup.html  fetch.html  graph.html  help.html  history.html  index.html  index_cmd.html  info.html  install.html  list-commands.html  rebuild-db.html  remove-orphaned.html  remove.html  repo-commands.html  search-file.html  search.html  sysconf.html  upgrade.html
config/: inary.conf-aarch64  inary.conf-armv7h  inary.conf-armv7l  inary.conf-i686  inary.conf-x86_64  mirrors.conf  sandbox.conf
doc/: about.rst  conf.py  dependency.dvi  dependency.tex  dependency.txt  faqs.rst  glossary.rst  inary-db.xmi  index.rst  installation.rst  package_versions.tex  pisi-db.xmi  pisi.lyx
tests/helloworld/helloworld/: CMakeLists.txt
tests/helloworld/helloworld/include/: ciso.hxx  general.hxx  utility.hxx
tests/helloworld/helloworld/src/: helloworld.cxx  utility.cxx
(+2209 files in other folders)
